correção de bugs

--- a/pit-stop-site/index.html
+++ b/pit-stop-site/index.html
@@ -197,7 +197,7 @@
                 <div class="pricing-card h-100">
                     
                     <div class="pricing-header bg-light">
-                        <h3 class="fw-bold text-dark">GRATUITO</h3>
+                        <h3 class="fw-bold text-dark">PLANO<br>GRATUITO</h3>
                         <div class="pricing-value">
                             <span class="h1 fw-bold text-dark">R$ 0</span>
                             <span class="text-muted">/mês</span>
@@ -211,6 +211,7 @@
                             <li><i class="ri-check-line text-success me-2"></i>Conhecimentos gerais e mecânicos</li>
                             <li><i class="ri-check-line text-success me-2"></i>Ficha técnica</li>
                             <li><i class="ri-check-line text-success me-2"></i>Visualização de modelos</li>
+                            <li><i class="ri-check-line text-success me-2"></i>Site com anúncios</li>
                         </ul>
                     </div>
 
@@ -240,10 +241,11 @@
                             <li><i class="ri-check-line text-success me-2"></i>Simulação básica</li>
                             <li><i class="ri-check-line text-success me-2"></i>Relatório PDF exportável</li>
                             <li><i class="ri-check-line text-success me-2"></i>Suporte via chat 24h</li>
+                            <li><i class="ri-check-line text-success me-2"></i>Site livre de anúncios</li>
                         </ul>
                     </div>
 
-                    <a href="cadastro.html" class="btn btn-azul-pitstop w-100 mt-4">Assinar Agora</a>
+                    <a href="cadastro.html" class="btn btn-azul-pitstop w-100 mt-4">Assinar Conforto</a>
                 </div>
             </div>
             
