--- a/pit-stop-site/base-conhecimento.html
+++ b/pit-stop-site/base-conhecimento.html
@@ -124,8 +124,8 @@
             <div class="row g-4">
                 <div class="col-md-6">
                     <div class="knowledge-article-card">
-                        <div class="article-image" style="background: linear-gradient(135deg, #283273, #BE1523); height: 200px; border-radius: 12px 12px 0 0; display: flex; align-items: center; justify-content: center;">
-                            <i class="ri-engine-line" style="font-size: 4rem; color: white;"></i>
+                        <div class="article-image" style="background: linear-gradient(135deg, #BE1523, #283273); height: 200px; border-radius: 12px 12px 0 0; display: flex; align-items: center; justify-content: center;">
+                            <i class="ri-tools-line" style="font-size: 4rem; color: white;"></i>
                         </div>
                         <div class="p-4">
                             <span class="badge bg-azul-pitstop mb-3">Mecânica</span>
