correção de bugs

--- a/pit-stop-site/index.html
+++ b/pit-stop-site/index.html
@@ -240,7 +240,7 @@
                             <li><i class="ri-check-line text-success me-2"></i>Comparação detalhada</li>
                             <li><i class="ri-check-line text-success me-2"></i>Simulação básica</li>
                             <li><i class="ri-check-line text-success me-2"></i>Relatório PDF exportável</li>
-                            <li><i class="ri-check-line text-success me-2"></i>Suporte via chat 24h</li>
+                            <li><i class="ri-check-line text-success me-2"></i>Suporte 2h por dia</li>
                             <li><i class="ri-check-line text-success me-2"></i>Site livre de anúncios</li>
                         </ul>
                     </div>
